kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creative-commons
spec:
  selector:
    app: creative-commons
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
