kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: creative-commons
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - creativecommons.djnd.si
      secretName: creative-commons-tls
  rules:
    - host: creativecommons.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: creative-commons
                port:
                  number: 80
